clang/test/BSC/Negative/SafeZone/safe_expr/safe_expr.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

safe void test_safe_expr1(void){
    int a = 0;
    a++;                              // expected-error {{'++' operator is forbidden in the safe zone}}
    int a1 = unsafe(a++);              // ok
    int *b = &a;                      // expected-error {{'&' operator is forbidden in the safe zone}}
    int *c = unsafe(&a);              // ok
    unsafe {
        int *d = &a;                  // ok
        int *e = safe(&a);            // expected-error {{'&' operator is forbidden in the safe zone}}
    }
}

void test_safe_expr2() {
    int a = 0;
    a++;                             // ok
    int a1 = safe(a++);              // expected-error {{'++' operator is forbidden in the safe zone}}
    int *b = &a;                     // ok
    int *c = safe(&a);               // expected-error {{'&' operator is forbidden in the safe zone}}
    safe {
        int *d = &a;                 // expected-error {{'&' operator is forbidden in the safe zone}}
        int *e = unsafe(&a);         // ok
    }
}

safe void foo<T>(T* owned p) {
    T * a = (T*)p                       // expected-error {{conversion from type 'T *owned' to 'T *' is forbidden in the safe zone}}
    T * b = unsafe((T*)p);              // ok
    T * c = (T*)p;                      // expected-error {{conversion from type 'T *owned' to 'T *' is forbidden in the safe zone}}
}

safe void test_safe_expr3(void) {
    int a = 0;
    int *owned p = unsafe((int *owned)&a);
    foo<int>(p);
}

int getNum() {
    return 1;
}

safe void setNum(int b) {
    int a = b;
    return;
}

safe void test_safe_expr4(void) {
    setNum(getNum());                       // expected-error {{unsafe function call is forbidden in the safe zone}}
    setNum(unsafe(getNum()));               // ok
    unsafe {
        setNum(getNum());                   // ok
        setNum(safe(getNum()));             // expected-error {{unsafe function call is forbidden in the safe zone}}
    }
}